Update html formatting
Used Prettier with default settings to style html. Also moved script tags to the end of the body rather than in the head.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html><html lang="en"><head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Home</title>
-  <link rel="stylesheet" href="/styles/css/main.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="/scripts/main.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/61629073?v=4">
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Home</title>
+    <link rel="stylesheet" href="/styles/css/main.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/61629073?v=4">
+  </head>
 
-<body>
-  <header><div class="navbar-hamburger-bar">
+  <body>
+    <header><div class="navbar-hamburger-bar">
   <div class="navbar-hamburger-container">
     <div class="navbar-hamburger">
       <div></div>
@@ -26,168 +24,35 @@
 <div class="header-banner">
   <h1 id="page-title" class="header-text">Home</h1>
 </div></header>
-  <main>
-    <p>
-      <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eligendi dolorem recusandae, sequi alias unde
-        rem expedita itaque, modi a voluptatem aliquam nulla quos temporibus quibusdam commodi. Nemo, repellat
-        voluptates.</span>
-      <span>Asperiores architecto, reiciendis quia ab voluptatibus enim dolorem eaque sit vitae quos esse consequatur
-        explicabo perferendis odio dicta praesentium eveniet nisi animi libero amet quasi! Neque nobis quaerat id
-        exercitationem.</span>
-      <span>Sapiente at provident odit dolor quod vitae iure commodi ad maiores odio a perferendis, esse rem possimus
-        magnam molestias reiciendis adipisci distinctio eos, aspernatur repudiandae voluptatum. Quas, voluptate harum?
-        Ratione.</span>
-      <span>Modi amet ex omnis dolores aut! Illo consectetur, quisquam, et ipsum suscipit ducimus deleniti officiis
-        laudantium necessitatibus soluta, eos libero minus. Iure similique totam facilis quas in exercitationem, nisi
-        ipsa?</span>
-      <span>Hic velit natus similique facilis excepturi aliquid ipsam modi sequi distinctio sed necessitatibus maiores,
-        eveniet saepe magnam! Tenetur consequuntur consequatur dicta modi, ullam rem, aperiam molestias blanditiis autem
-        cupiditate soluta.</span>
-      <span>Quidem autem adipisci excepturi quisquam sapiente nostrum sequi necessitatibus sint enim quod. Quibusdam
-        illum accusantium explicabo praesentium beatae voluptatem, autem nostrum odio aspernatur est iure accusamus
-        assumenda maiores molestiae nemo!</span>
-      <span>Sint, est eveniet aspernatur maxime repellendus voluptas vitae asperiores veniam voluptate hic, amet
-        deserunt. Qui dicta maxime excepturi harum saepe animi recusandae, nemo molestiae, distinctio porro
-        reprehenderit repellendus adipisci ipsum.</span>
-      <span>Distinctio doloremque odit repudiandae ducimus provident libero dolore ratione quo tempora exercitationem!
-        Nostrum nemo debitis atque consequatur eum consectetur maiores earum aliquid asperiores neque facere eos, itaque
-        rem illum pariatur!</span>
-      <span>Esse a nulla, explicabo nesciunt aut, amet, in praesentium ea ratione voluptatem cumque quos. Esse quo nihil
-        eius dolores ratione! Earum quam consectetur, consequatur tenetur fuga harum totam molestiae cum.</span>
-      <span>Molestiae voluptates et perspiciatis eaque dolor, recusandae ut vel molestias officia saepe delectus, fugit
-        quisquam sint harum mollitia quasi voluptate voluptatum, libero quibusdam quae! Reiciendis aliquam delectus
-        voluptate officiis pariatur.</span>
-    </p>
-    <p class="contrasting-section">
-      <span>Veniam quos reprehenderit esse sit omnis facilis. Aliquid ut minima error excepturi ad. Accusantium nihil
-        sed, magni obcaecati est perspiciatis reprehenderit porro maxime libero inventore expedita rem magnam placeat
-        aperiam.</span>
-      <span>Dolorem necessitatibus omnis incidunt amet, quaerat odit maiores tempore sit ducimus temporibus numquam
-        soluta reprehenderit labore unde expedita nemo perferendis. Consequatur repellat amet commodi fuga voluptas eos
-        corporis, vero exercitationem.</span>
-      <span>Maxime commodi, veritatis molestias eligendi eius consequuntur quas et aspernatur ab doloribus esse magni
-        reiciendis corrupti unde accusantium delectus odio itaque quia placeat, quis dolorum eaque ipsam! Voluptatum,
-        earum necessitatibus.</span>
-      <span>Magnam minus pariatur dolore voluptas voluptatum delectus, ea corporis excepturi. Enim velit, illo corporis
-        quis reiciendis accusamus fugiat error nostrum unde mollitia ullam sit ea commodi. Dolorum aut cumque
-        incidunt.</span>
-      <span>Minus nam distinctio doloremque exercitationem voluptate totam tempore iure unde enim eligendi, quasi
-        corporis, quae laudantium ratione eius sequi ullam nisi repellat, incidunt explicabo illum provident a.
-        Exercitationem, aliquam cumque!</span>
-      <span>Necessitatibus, officiis? Laudantium cupiditate tempore voluptates numquam reprehenderit in dolor. Cumque
-        tenetur consequatur, pariatur totam ea hic facilis odit quaerat reprehenderit, repellat modi recusandae, culpa
-        omnis at esse consectetur aspernatur?</span>
-      <span>Facilis veniam enim consequatur doloremque qui, distinctio officiis sequi molestiae. Iure, ducimus error
-        ipsam placeat assumenda pariatur maxime nisi magni beatae expedita, voluptas eius. Quasi porro ullam sint sed
-        et!</span>
-      <span>Minima pariatur, quasi rem, repellendus voluptatibus quam perspiciatis veniam reiciendis rerum mollitia
-        doloremque. Dolorem obcaecati eos non eveniet hic cumque, libero accusamus ad, provident nostrum quo qui?
-        Repellendus, consectetur quisquam.</span>
-      <span>Nam facere voluptas quod, aut saepe iusto incidunt doloribus eveniet recusandae suscipit praesentium.
-        Dolorem, sequi! Voluptates dolor, ipsam iste ad, at voluptatibus explicabo ullam sint quaerat, praesentium
-        ratione tempore laborum.</span>
-      <span>Dolorum incidunt, dolore aperiam amet quaerat perspiciatis atque doloremque enim in! Harum, voluptatum
-        blanditiis! Molestias temporibus vel tenetur pariatur dicta assumenda repellat? Ipsum debitis illum recusandae
-        adipisci culpa, officia perspiciatis!</span>
-    </p>
-    <p>
-      <span>Similique, assumenda animi hic sed numquam at! Ea, ex corporis voluptas itaque consectetur dolores similique
-        sunt nesciunt fuga hic, illum nisi beatae, vel nostrum ratione necessitatibus odit eum perspiciatis vero?</span>
-      <span>Rerum provident voluptatum veniam consequuntur ratione earum praesentium aut repudiandae, esse saepe dolorum
-        aliquid natus fugit cum? Id exercitationem nam magni eum repellat ea perspiciatis porro. Voluptas consequuntur
-        ratione accusamus.</span>
-      <span>Quam nobis molestiae beatae. Eaque distinctio voluptate necessitatibus cum inventore provident quis dicta
-        magnam nesciunt eligendi labore, dolores impedit, assumenda fuga maxime deleniti quaerat hic! Quaerat
-        consequatur labore facere nobis?</span>
-      <span>Dignissimos libero accusantium enim accusamus inventore ducimus maxime quibusdam fugit? Ducimus tempore odit
-        aperiam aliquam, porro eos! Temporibus voluptate, earum, a est sed facilis autem pariatur corporis, minus
-        explicabo iure.</span>
-      <span>Harum maiores debitis rerum ipsa accusantium, sed asperiores, soluta minus dolore voluptas molestias, iure
-        commodi iusto? Optio necessitatibus eveniet aliquid rerum ipsum omnis, sequi quasi aspernatur, architecto quis
-        animi eius!</span>
-      <span>Inventore, recusandae alias odio tempore ipsam explicabo, illum, optio impedit reiciendis consectetur vitae
-        possimus ut nobis at! Tenetur dicta sequi vitae necessitatibus quae, inventore beatae harum nobis earum soluta
-        veritatis!</span>
-      <span>Reprehenderit, delectus eaque aliquid provident, voluptatibus enim earum in quis dicta eveniet culpa tenetur
-        molestiae amet dolores dignissimos esse nobis rerum exercitationem quas cumque! Quas delectus doloribus tempora
-        dolorem cupiditate!</span>
-      <span>Velit quas autem voluptatibus vel unde consectetur consequuntur maiores! Cumque ratione excepturi ab facere
-        possimus facilis, rem consequuntur fugiat nisi qui neque eius. Praesentium perspiciatis numquam cupiditate
-        pariatur quod nemo.</span>
-      <span>Unde, mollitia cum modi repudiandae, nisi doloremque accusantium animi veniam fugiat excepturi aspernatur
-        voluptas doloribus quis pariatur nesciunt nulla corrupti dolorum maxime minus consequatur vitae ratione. Iure
-        earum recusandae cumque.</span>
-      <span>Libero repudiandae earum alias molestias saepe? Est rerum inventore facilis, voluptatum ex quae illum cumque
-        repudiandae dolorem dolorum nemo qui, debitis quaerat, a modi commodi. Beatae nobis ipsa incidunt
-        placeat.</span>
-    </p>
-    <p>
-      <span>Perferendis, consequuntur ratione perspiciatis aut veritatis eligendi doloremque quam at magnam explicabo, a
-        atque ex ducimus rem nam laboriosam impedit quia molestiae. Architecto odio aliquid dolorum commodi libero, a
-        quo.</span>
-      <span>Unde velit quisquam dolorem at. Labore minus tempore cumque dolorum nulla eaque, atque officiis neque
-        nesciunt fugiat tempora assumenda ab error. Voluptate exercitationem fugit officiis deserunt, ratione quisquam
-        itaque quidem.</span>
-      <span>Nihil deleniti facilis eius suscipit ipsa incidunt natus quo modi aut! Perferendis accusamus autem fugit a
-        odit architecto deleniti. Tempore dignissimos temporibus, amet reprehenderit enim accusamus beatae aliquid
-        numquam rerum!</span>
-      <span>Maiores officiis minus voluptas saepe dolore perferendis libero ipsum cupiditate consequuntur beatae nulla,
-        officia iure nam expedita? Rem reprehenderit magnam voluptatem, odit error placeat laborum quas aliquid animi
-        minus nesciunt.</span>
-      <span>Debitis numquam nulla fugit reiciendis? Tempora officia magnam doloremque! Necessitatibus, saepe libero
-        provident tempore corporis recusandae delectus excepturi veritatis et tenetur at quis explicabo sit mollitia
-        ducimus blanditiis placeat. Commodi!</span>
-      <span>Blanditiis eveniet sunt unde in itaque eos voluptatibus ipsam vitae quidem excepturi velit laudantium
-        impedit tenetur animi, numquam perferendis. Ipsam velit debitis quo animi, id iusto modi quaerat nisi
-        quibusdam!</span>
-      <span>A obcaecati animi dolor beatae. Accusantium earum dolores quo id voluptas minima consequuntur voluptatem
-        fuga ipsam ea illo ipsa architecto, sed numquam? Iusto dolores impedit nulla inventore optio quam quas!</span>
-      <span>Corrupti blanditiis reiciendis itaque! Voluptatibus repellat exercitationem ab labore, dolore eum aperiam
-        ipsa veritatis et similique beatae laboriosam? Quis aspernatur eum, est voluptate in alias minus totam corporis
-        itaque atque.</span>
-      <span>Possimus numquam ipsam laboriosam fuga adipisci, repellendus libero? Quaerat atque eum ipsam magni explicabo
-        voluptate esse minus, ipsum distinctio! Porro eveniet culpa nostrum labore nobis nisi ab illo sint sunt!</span>
-      <span>Pariatur at quasi voluptates natus, quo voluptatum. Minima hic maiores veniam error est libero sequi? Quasi
-        aperiam, voluptatibus velit unde, eligendi aliquid perspiciatis quo eius fugit molestiae non ipsum eum!</span>
-    </p>
-    <p>
-      <span>Quaerat, asperiores repellendus, minus animi quibusdam, dolorem repudiandae ex odio sit suscipit tempore
-        corporis perspiciatis dolore adipisci! Alias, laudantium doloribus in adipisci itaque omnis iste illo eaque,
-        accusantium nobis molestias!</span>
-      <span>Eligendi illum quam officia reiciendis recusandae ut voluptatem ab autem facilis saepe voluptates minima
-        ratione quo vero itaque quaerat, aliquid dignissimos? Cupiditate tempora cum obcaecati atque in. Molestiae,
-        dolore voluptate?</span>
-      <span>Quis fugit quos minima? Repellendus quae ut nesciunt praesentium ducimus non soluta expedita fuga velit
-        itaque, possimus blanditiis ipsam fugiat dicta odio quas natus molestias unde! Cum sed quidem possimus?</span>
-      <span>Enim dicta incidunt, perspiciatis optio dolores, tempore veniam minus adipisci consequuntur iure sequi iusto
-        ratione vitae ipsa repellat repudiandae quo eos facilis quod excepturi, labore quibusdam nemo. Autem, sunt
-        harum.</span>
-      <span>Exercitationem voluptatum, porro nihil doloribus numquam qui doloremque ipsa eveniet veniam aspernatur,
-        consequuntur consectetur voluptatibus dolorem harum nulla iure vitae in nisi mollitia illo, molestiae deserunt
-        minus. Alias, velit. Alias?</span>
-      <span>Voluptatibus, asperiores? Nemo illo atque minima quos unde odit repudiandae veritatis, quas, harum minus
-        aspernatur? Pariatur autem eveniet totam rerum dolorem, est, corrupti fugit neque, repellendus a quisquam
-        consequatur possimus.</span>
-      <span>Ab numquam est enim amet quam illum nihil adipisci magni, ea dignissimos eaque dolorem velit corporis
-        voluptatum qui optio non impedit facilis provident. Tenetur iusto sunt atque optio deserunt dolores!</span>
-      <span>Quas voluptatem repellendus ratione ea expedita quidem dolorem ut accusamus dolorum, perspiciatis unde,
-        facilis voluptas officiis aut magnam ullam sit possimus corporis ipsam, error numquam. Fugiat voluptas autem
-        quaerat repudiandae.</span>
-      <span>Non tempora explicabo, consequuntur natus eligendi impedit dignissimos. Impedit distinctio magni ab quo,
-        suscipit aliquid enim, magnam nobis quidem itaque repudiandae placeat. Voluptate quam id aut provident quod
-        adipisci rem.</span>
-      <span>Accusantium neque beatae nihil deleniti, itaque modi nobis adipisci velit tenetur natus autem cupiditate
-        libero cumque laboriosam vitae! Ipsa inventore magnam porro eaque dicta exercitationem rerum facere deserunt
-        veniam quod?</span>
-    </p>
-  </main>
-  <footer><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
+    <main>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error rem
+        soluta eveniet quasi vitae accusantium in, tempore asperiores nostrum
+        dolores odio laboriosam accusamus architecto ab odit, aliquam placeat.
+        Libero, deleniti?
+      </p>
+      <p class="contrasting-section">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+        asperiores ex maxime reprehenderit doloremque, vero similique vel nulla
+        laborum perspiciatis eum id ratione vitae porro accusamus repellendus
+        obcaecati rem aliquid!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos,
+        maiores deleniti culpa sunt facilis nam aut, ea explicabo doloribus
+        suscipit animi provident quia dolor, nesciunt totam neque ipsa! Animi,
+        aliquid.
+      </p>
+    </main>
+    <footer><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
 <br>
 <div class="footer-icons-container">
   <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank" rel="noopener"><img src="/images/github-logo.svg" alt="Github link" width="32" height="32"></a>
   <a class="social-media-icon" href="https://twitter.com/" target="_blank" rel="noopener"><img src="/images/twitter-logo.svg" alt="Twitter link" width="32" height="32"></a>
   <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank" rel="noopener"><img src="/images/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
 </div></footer>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/scripts/main.js"></script>
+  
 
 </body></html>
