--- a/html/dest/portfolio.html
+++ b/html/dest/portfolio.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html><html lang="en"><head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="/styles/css/main.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="/scripts/main.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/61629073?v=4">
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="/styles/css/main.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/61629073?v=4">
+  </head>
 
-<body>
-  <header><div class="navbar-hamburger-bar">
+  <body>
+    <header><div class="navbar-hamburger-bar">
   <div class="navbar-hamburger-container">
     <div class="navbar-hamburger">
       <div></div>
@@ -26,23 +24,28 @@
 <div class="header-banner">
   <h1 id="page-title" class="header-text">Portfolio</h1>
 </div></header>
-  <main>
-    <div class="portfolio-parent">
-      <div class="portfolio-item">
-        <img src="https://www.w3schools.com/w3css/img_lights.jpg">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis odio voluptates a odit! Tempore labore
-          corporis nam excepturi atque necessitatibus rem eligendi aliquam consequuntur consequatur! Inventore, quis
-          quia? Debitis, iusto?</p>
+    <main>
+      <div class="portfolio-parent">
+        <div class="portfolio-item">
+          <img src="https://www.w3schools.com/w3css/img_lights.jpg">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+            odio voluptates a odit! Tempore labore corporis nam excepturi atque
+            necessitatibus rem eligendi aliquam consequuntur consequatur!
+            Inventore, quis quia? Debitis, iusto?
+          </p>
+        </div>
       </div>
-    </div>
-  </main>
-  <footer><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
+    </main>
+    <footer><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
 <br>
 <div class="footer-icons-container">
   <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank" rel="noopener"><img src="/images/github-logo.svg" alt="Github link" width="32" height="32"></a>
   <a class="social-media-icon" href="https://twitter.com/" target="_blank" rel="noopener"><img src="/images/twitter-logo.svg" alt="Twitter link" width="32" height="32"></a>
   <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank" rel="noopener"><img src="/images/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
 </div></footer>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/scripts/main.js"></script>
+  
 
 </body></html>
