Fixed broken links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
-    <link rel="stylesheet" href="/styles/css/main.css">
+    <link rel="stylesheet" href="/dist/main.css">
     <link rel="shortcut icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/61629073?v=4">
   </head>
 
@@ -19,13 +19,14 @@
 <div id="navbar-container">
   <nav class="navbar">
     <a id="home-navbar-button" href="/index.html" class="navbar-button active">Home</a>
-    <a id="portfolio-navbar-button" href="/html/dest/portfolio.html" class="navbar-button">Portfolio</a>
+    <a id="portfolio-navbar-button" href="/dist/portfolio.html" class="navbar-button">Portfolio</a>
     <a href="mailto:matthew_occleshaw@outlook.com" class="navbar-button float-right">Contact Me</a>
   </nav>
 </div>
 <div class="header-banner">
   <h1 id="page-title" class="header-text">Home</h1>
-</div></header>
+</div>
+</header>
     <main>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Error rem
@@ -49,11 +50,12 @@
     <footer><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
 <br>
 <div class="footer-icons-container">
-  <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank" rel="noopener"><img src="/images/github-logo.svg" alt="Github link" width="32" height="32"></a>
-  <a class="social-media-icon" href="https://twitter.com/" target="_blank" rel="noopener"><img src="/images/twitter-logo.svg" alt="Twitter link" width="32" height="32"></a>
-  <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank" rel="noopener"><img src="/images/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
-</div></footer>
+  <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank" rel="noopener"><img src="/dist/github-logo.svg" alt="Github link" width="32" height="32"></a>
+  <a class="social-media-icon" href="https://twitter.com/" target="_blank" rel="noopener"><img src="/dist/twitter-logo.svg" alt="Twitter link" width="32" height="32"></a>
+  <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank" rel="noopener"><img src="/dist/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
+</div>
+</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/scripts/main.js"></script>
+    <script src="/dist/main.js"></script>
   </body>
 </html>
