--- a/src/html/content/portfolio.html
+++ b/src/html/content/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/styles/css/main.css" />
+    <link rel="stylesheet" href="/dist/main.css" />
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -29,6 +29,6 @@
     </main>
     <footer></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/scripts/main.js"></script>
+    <script src="/dist/main.js"></script>
   </body>
 </html>
