--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
-    <link rel="stylesheet" href="/dist/main.css">
-    <link rel="shortcut icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/61629073?v=4">
-  </head>
+  <head data-title="Home" data-description="Home page with general information about me"><meta charset="UTF-8">
+<meta name="description" content="Home page with general information about me">
+<meta name="keywords" content="web developer, github, python, html, css, javascript, nodejs, react">
+<meta name="author" content="Matthew Occleshaw">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Home</title>
+<link rel="stylesheet" href="/dist/main.css">
+<link rel="shortcut icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/61629073?v=4">
+</head>
 
   <body>
     <header><div class="navbar-hamburger-bar">
@@ -55,7 +57,7 @@
   <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank" rel="noopener"><img src="/dist/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
 </div>
 </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/dist/main.js"></script>
-  </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="/dist/main.js"></script>
+</body>
 </html>
