--- a/src/html/content/index.html
+++ b/src/html/content/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home</title>
-    <link rel="stylesheet" href="/dist/main.css" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://avatars.githubusercontent.com/u/61629073?v=4"
-    />
+  <head
+    data-title="Home"
+    data-description="Home page with general information about me"
+  >
   </head>
 
   <body>
@@ -35,7 +29,5 @@
       </p>
     </main>
     <footer></footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/dist/main.js"></script>
   </body>
 </html>
