--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head data-title="Home" data-description="Home page with general information about me"><meta charset="UTF-8">
+  <head data-title="Home" data-description="Home page with general information about me">
+<meta charset="UTF-8">
 <meta name="description" content="Home page with general information about me">
 <meta name="keywords" content="web developer, github, python, html, css, javascript, nodejs, react">
 <meta name="author" content="Matthew Occleshaw">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Home</title>
+<title>
+Home</title>
 <link rel="stylesheet" href="/dist/main.css">
 <link rel="shortcut icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/61629073?v=4">
 </head>
 
   <body>
-    <header><div class="navbar-hamburger-bar">
+    <header>
+<div class="navbar-hamburger-bar">
   <div class="navbar-hamburger-container">
     <div class="navbar-hamburger">
       <div></div>
@@ -49,7 +52,8 @@
         aliquid.
       </p>
     </main>
-    <footer><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
+    <footer>
+<a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
 <br>
 <div class="footer-icons-container">
   <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank" rel="noopener"><img src="/dist/github-logo.svg" alt="Github link" width="32" height="32"></a>
