Fixed contrasting section
To create a contrasting section now, create a div with the class 'contrasting-section' and then put the <p> (or other elements) into it.

--- a/src/html/content/index.html
+++ b/src/html/content/index.html
@@ -15,12 +15,14 @@
         dolores odio laboriosam accusamus architecto ab odit, aliquam placeat.
         Libero, deleniti?
       </p>
-      <p class="contrasting-section">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
-        asperiores ex maxime reprehenderit doloremque, vero similique vel nulla
-        laborum perspiciatis eum id ratione vitae porro accusamus repellendus
-        obcaecati rem aliquid!
-      </p>
+      <div class="contrasting-section">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+          asperiores ex maxime reprehenderit doloremque, vero similique vel
+          nulla laborum perspiciatis eum id ratione vitae porro accusamus
+          repellendus obcaecati rem aliquid!
+        </p>
+      </div>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos,
         maiores deleniti culpa sunt facilis nam aut, ea explicabo doloribus
