Add automatic removal of data attributes
Data attributes containing the description and title in the <head> tag were being outputted to the final html files when they were not needed. They now get automatically removed by cheerio in the gulp htmlTask.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head
-    data-title="Home"
-    data-description="Home page with general information about me"
-  >
+  <head>
     <meta charset="UTF-8" />
     <meta
       name="description"
