--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <footer>
       <a
         class="footer-link"
-        href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io"
+        href="https://www.github.com/mjocc/mjocc.github.io"
         target="_blank"
         rel="noopener"
         >GitHub Repository</a
@@ -89,7 +89,7 @@
       <div class="footer-icons-container">
         <a
           class="social-media-icon"
-          href="https://github.com/matthew-occleshaw"
+          href="https://github.com/mjocc"
           target="_blank"
           rel="noopener"
           ><img
@@ -116,7 +116,7 @@
           rel="noopener"
           ><img
             src="/dist/linkedin-logo.svg"
-            alt="Linkedin link"
+            alt="LinkedIn link"
             width="32"
             height="32"
         /></a>
