Use prettier links without .html extensions in navbar

--- a/index.html
+++ b/index.html
@@ -32,15 +32,12 @@
       </div>
       <div id="navbar-container">
         <nav class="navbar">
-          <a
-            id="home-navbar-button"
-            href="/index.html"
-            class="navbar-button active"
+          <a id="home-navbar-button" href="/" class="navbar-button active"
             >Home</a
           >
           <a
             id="portfolio-navbar-button"
-            href="/dist/portfolio.html"
+            href="/dist/portfolio"
             class="navbar-button"
             >Portfolio</a
           >
