Fix broken links from site structure update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           >
           <a
             id="portfolio-navbar-button"
-            href="/dist/portfolio"
+            href="/portfolio"
             class="navbar-button"
             >Portfolio</a
           >
@@ -90,7 +90,7 @@
           target="_blank"
           rel="noopener"
           ><img
-            src="/dist/github-logo.svg"
+            src="/dist/img/github-logo.svg"
             alt="Github link"
             width="32"
             height="32"
@@ -101,7 +101,7 @@
           target="_blank"
           rel="noopener"
           ><img
-            src="/dist/twitter-logo.svg"
+            src="/dist/img/twitter-logo.svg"
             alt="Twitter link"
             width="32"
             height="32"
@@ -112,7 +112,7 @@
           target="_blank"
           rel="noopener"
           ><img
-            src="/dist/linkedin-logo.svg"
+            src="/dist/img/linkedin-logo.svg"
             alt="LinkedIn link"
             width="32"
             height="32"
