--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,7 +35,7 @@
           <a id="home-navbar-button" href="/" class="navbar-button">Home</a>
           <a
             id="portfolio-navbar-button"
-            href="/dist/portfolio"
+            href="/portfolio"
             class="navbar-button active"
             >Portfolio</a
           >
@@ -79,7 +79,7 @@
           target="_blank"
           rel="noopener"
           ><img
-            src="/dist/github-logo.svg"
+            src="/dist/img/github-logo.svg"
             alt="Github link"
             width="32"
             height="32"
@@ -90,7 +90,7 @@
           target="_blank"
           rel="noopener"
           ><img
-            src="/dist/twitter-logo.svg"
+            src="/dist/img/twitter-logo.svg"
             alt="Twitter link"
             width="32"
             height="32"
@@ -101,7 +101,7 @@
           target="_blank"
           rel="noopener"
           ><img
-            src="/dist/linkedin-logo.svg"
+            src="/dist/img/linkedin-logo.svg"
             alt="LinkedIn link"
             width="32"
             height="32"
