--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -53,7 +53,7 @@
     <main>
       <div class="portfolio-parent">
         <div class="portfolio-item">
-          <img src="https://www.w3schools.com/w3css/img_lights.jpg" />
+          <img src="/portfolio/img_lights.webp" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
             odio voluptates a odit! Tempore labore corporis nam excepturi atque
