Update email address in contact me link

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
             class="navbar-button"
             >Portfolio</a
           >
-          <a
-            href="mailto:matthew_occleshaw@outlook.com"
-            class="navbar-button float-right"
+          <a href="mailto:mjocc@outlook.com" class="navbar-button float-right"
             >Contact Me</a
           >
         </nav>
