--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -39,9 +39,7 @@
             class="navbar-button active"
             >Portfolio</a
           >
-          <a
-            href="mailto:matthew_occleshaw@outlook.com"
-            class="navbar-button float-right"
+          <a href="mailto:mjocc@outlook.com" class="navbar-button float-right"
             >Contact Me</a
           >
         </nav>
